[tool.poetry]
name = "dustpath"
version = "0.1.0"
description = ""
authors = ["Pongsathon Chodchoi <pongsathon.cc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "0.38.4"
Werkzeug = "^2.2.2"
flask = "^2.2"
Flask-WTF = "^1.0.0"
flask-mongoengine = "^1.0.0"
flask-login = "^0.6.2"
blinker = "^1.5"
flask-principal = "^0.4.0"
flask-restx = "^1.0.3"
authlib ="^1.1.0"
bcrypt = "^4.0.1"
requests = "^2.28.1"
flask_marshmallow = "^0.14.0"
flask_jwt_extended ="^4.4.4"
loginpass = "^0.5"
email_validator = "^1.3.0"
pandas = "^1.5.1"
flask_cors = "^3.0.10"
flask_caching = "^2.0.1"
psutil = "^5.9.4"
nats-py = "^2.2.0"
watchdog = "^2.1.9"
brython = "^3.11.0"
openpyxl ="^3.0.10"
dask = "^2022.10.2"
netCDF4 = "^1.6.1"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dustpath-web = 'dustpath.cmd.web:main'
dustpath-controller = 'dustpath.cmd.controller:main'
dustpath-compute = 'dustpath.cmd.compute:main'
dustpath-processor = 'dustpath.cmd.processor:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
