[tool.poetry]
name = "dustpath"
version = "0.1.0"
description = ""
authors = ["Pongsathon Chodchoi <pongsathon.cc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
wheel = "^0.41.2"
flask = "^2.3.3"
Flask-WTF = "^1.1.2"
flask-login = "^0.6.2"
blinker = "^1.6.2"
authlib ="^1.2.1"
requests = "^2.31.0"
flask_marshmallow = "^0.15.0"
flask_jwt_extended ="^4.5.2"
pandas = "^2.1.1"
flask_cors = "^4.0.0"
flask_caching = "^2.0.2"
psutil = "^5.9.5"
nats-py = "^2.4.0"
watchdog = "^3.0.0"
brython = "^3.11.3"
openpyxl ="^3.1.2"
netCDF4 = "^1.6.4"
scikit-learn = "^1.3.1"
flask-me = "^1.0.2"
werkzeug = "2.3.7"
flask-restx = "^1.1.0"
email-validator = "^2.0.0"

[tool.poetry.scripts]
dustpath-web = 'dustpath.cmd.web:main'
dustpath-controller = 'dustpath.cmd.controller:main'
dustpath-compute = 'dustpath.cmd.compute:main'
dustpath-processor = 'dustpath.cmd.processor:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
